Bug 224881 - Fix build break after r276363
Summary: Fix build break after r276363
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks: 224864
  Show dependency treegraph
 
Reported: 2021-04-21 11:27 PDT by Kimmo Kinnunen
Modified: 2021-04-22 18:12 PDT (History)
4 users (show)

See Also:


Attachments
Patch (1.48 KB, patch)
2021-04-21 11:30 PDT, Kimmo Kinnunen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2021-04-21 11:27:44 PDT
Fix build break after r276363
inconsistent ifdefs
Comment 1 Kimmo Kinnunen 2021-04-21 11:30:50 PDT
Created attachment 426717 [details]
Patch
Comment 2 EWS 2021-04-21 12:08:08 PDT
Committed r276381 (236856@main): <https://commits.webkit.org/236856@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 426717 [details].
Comment 3 Radar WebKit Bug Importer 2021-04-22 18:12:22 PDT
<rdar://problem/77048916>