Fix build break after r276363 https://bugs.webkit.org/show_bug.cgi?id=224881

Unreviewed, build fix.

Fix build break after r276363
WebGL GPUP crashes when preparing for display due to off-thread WeakPtr access (IOSURFACE_SET_OWNERSHIP_IDENTITY)

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-04-21

* GPUProcess/graphics/RemoteGraphicsContextGLCocoa.cpp:

Canonical link: https://commits.webkit.org/236856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276381 268f45cc-cd09-0410-ab3c-d52691b4dbfc